--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,12 @@
     <title>Mind+</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="assets/images/logo-sem-escrita.png"
+    />
+    <link rel="stylesheet" href="reset.css" />
   </head>
   <body>
     <app-root></app-root>
