--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,8 +10,11 @@
       type="image/x-icon"
       href="assets/images/logo-sem-escrita.png"
     />
-  </head>
-  <body>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+  <body class="mat-typography">
     <app-root></app-root>
   </body>
 </html>
